Making categories clickable and assign the selected value into query.
parameter, i.e if clicked on sports the url will change to ...?cat="sports"

--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -103,7 +103,11 @@
             <ul>
                 @foreach (var category in categoryList.OrderBy(order => order))
                 {
-                    <li>@category</li>
+                    <li>
+                        <a href="@Model.Url?cat=@category">
+                            @category
+                        </a>
+                    </li>
                 }
             </ul>
         </div>
