--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -102,6 +102,9 @@
             @* Render the filter in the sidebar *@
             <h3>Categories</h3>
             <ul>
+                <li>
+                    <a class="btn btn-primary" href="@Model.Url">Clear Filter</a>
+                </li>
                 @foreach (var category in categoryList.OrderBy(order => order))
                 {
                     <li>
