--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -125,7 +125,7 @@
                         <nav aria-label="Page navigation example">
                             <ul class="pagination">
                                 <li class="page-item">
-                                    <a class="page-link" href="">Previous</a>
+                                    <a class="page-link" href="@Model.Url?page=@(selectedPage - 1)">Previous</a>
                                 </li>
 
                                 @for (var i = 1; i <= totalPages; i++)
@@ -136,7 +136,7 @@
                                 }
 
                                 <li class="page-item">
-                                    <a class="page-link" href="#">Next</a>
+                                    <a class="page-link" href="@Model.Url?page=@(selectedPage + 1)">Next</a>
                                 </li>
                             </ul>
                         </nav>
