--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -135,7 +135,7 @@
                                     </li>
                                 }
 
-                                <li class="page-item">
+                                <li class="@(selectedPage >= totalPages ? "disabled" : "") page-item">
                                     <a class="page-link" href="@Model.Url?page=@(selectedPage + 1)">Next</a>
                                 </li>
                             </ul>
