--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -147,7 +147,7 @@
         <div class="col-md-4 bg-dark text-white text-center">
             @* Render the filter in the sidebar *@
             <h3>Categories</h3>
-            <ul>
+            <ul class="list-unstyled">
                 <li>
                     <a class="btn btn-primary" href="@Model.Url">Clear Filter</a>
                 </li>
