Added under construction notice

--- a/HighlyDeveloped.Web/Views/main.cshtml
+++ b/HighlyDeveloped.Web/Views/main.cshtml
@@ -62,6 +62,12 @@
 {
     @Html.Partial($"NavBar")
 }
+<div class="p-3 pb-2 bg-warning text-dark warningBanner">
+    <div class="container">
+        <i class="fa-solid fa-circle-exclamation"></i>
+        Notice! This page is still under construction!
+    </div>
+</div>
 <body>
 @RenderBody()
 <div class="alert text-center cookiealert" role="alert">
