--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -1,5 +1,17 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @{
-	Layout = "main.cshtml";
+Layout = "main.cshtml";
+var heroOverlayColour = Model.Value<string>("heroOverlayColour");
 }
 
+@if(!string.IsNullOrEmpty(heroOverlayColour))
+{
+	<style>
+	.home-hero > .overlay {
+		background-color: #@heroOverlayColour !important;
+		opacity: 0.70 !important;
+	}
+</style>
+}
+
+@Html.Partial("hero")
