--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -17,4 +17,6 @@ var heroOverlayColour = Model.Value<string>("heroOverlayColour");
 @Html.Partial("hero")
 
 <header>
+	<form action="@Model.Url" method="get">
+	</form>
 </header>
