--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -18,5 +18,7 @@ var heroOverlayColour = Model.Value<string>("heroOverlayColour");
 
 <header>
 	<form action="@Model.Url" method="get">
+		<fieldset>
+		</fieldset>
 	</form>
 </header>
