Added input field

--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -19,6 +19,7 @@ var heroOverlayColour = Model.Value<string>("heroOverlayColour");
 <header>
 	<form action="@Model.Url" method="get">
 		<fieldset>
+            <input type="text" name="query" placeholder="Search..."/>
 		</fieldset>
 	</form>
 </header>
