--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -20,6 +20,7 @@ var heroOverlayColour = Model.Value<string>("heroOverlayColour");
 	<form action="@Model.Url" method="get">
 		<fieldset>
             <input type="text" name="query" placeholder="Search..."/>
+            <button class="class-search">Search</button>
 		</fieldset>
 	</form>
 </header>
