Added todo note

--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -25,3 +25,4 @@ var heroOverlayColour = Model.Value<string>("heroOverlayColour");
 	</form>
 </header>
 <h1>Search</h1>
+@*TODO Search results here... *@
