Added ContentModels.Search type for UmbracoViewPage

--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Search>;
 @{
     Layout = "main.cshtml";
     var searchQuery = Request.QueryString["query"];
