Replacing textarea tag with text tag

--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -47,15 +47,15 @@
     <section>
         @if (resultsCount == 0 || searchResults == null)
         {
-            <textarea>
+            <text>
                Cannot find any results for @searchQuery
-            </textarea>
+            </text>
         }
         else
         {
-            <textarea>
+            <text>
                @resultsCount found results(s).
-            </textarea>
+            </text>
         }
     </section>
 }
