Returning the found queries results as clickable links

--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -56,6 +56,19 @@
             <text>
                 @resultsCount found results(s).
             </text>
+            <ul>
+                @foreach (var result in searchResults)
+                {
+                    {
+                        <li>
+                            <h3>
+                                <a href="@result.Content.Url">@result.Content.Name</a>
+                            </h3>
+                        </li>
+                    }
+
+                }
+            </ul>
         }
     </section>
 }
