--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -32,6 +32,7 @@
 }
 
 <header class="jumbotron jumbotron-fluid home-hero" style="background-image:url('@heroImageUrl')">
+    <div class="overlay">
 
 <header>
     <form action="@Model.Url" method="get">
