--- a/HighlyDeveloped.Web/Views/search.cshtml
+++ b/HighlyDeveloped.Web/Views/search.cshtml
@@ -79,8 +79,10 @@
                                 </li>
                             }
 
+                        }
+                    </ul>
                 }
-            </ul>
-        }
-    </section>
-}
+            </div>
+        </div>
+    }
+</section>
